improvements from yvonne

--- a/routing.tex
+++ b/routing.tex
@@ -1,6 +1,6 @@
 \chapter{Routing}
 
-Even nowadays the routing is often done manually for analog circuits. This is mainly caused by a lack of good tools and therefore the missing trust of engineers in them. The engineers consider a lot of different constraints during the routing, for example symmetries, net lengths and capacitive couplings. All these things have a major impact on the performance of the circuit, as in the analog world it is very important to have a really accurate signal level, only high or low isn't enough.
+Even nowadays the routing is often done manually for analog circuits. This is mainly caused by a lack of good tools and consequently the missing trust of engineers in them. The engineers consider a lot of different constraints during the routing, for example symmetries, net lengths and capacitive couplings. All these things have a major impact on the performance of the circuit, as it is very important in the analog world to have a really accurate signal level because only high or low isn't enough.
 
 The designer additonally adds guards and rings to the placement to protect certain devices from noise. This noise can come from for example the clock net or other routes, which carry a signal with high frequency. But high frequencies aren't the only disturbing effects, already during the placement the designer has to consider temperature gradients, caused by transistors with a high power consumption. To avoid problems with different temperatures in the substrate of for example the devices of a differential pair they can be placed symmetric or can even have a common centroid. Around these grouped modules then the designer can create for example a guard ring to protect the devices even more. An example for a manually routed layout can be seen in \nref{fig:miller_amplifier_routed_layout}.
 
