fixed formula for area capacity

--- a/definitions.tex
+++ b/definitions.tex
@@ -132,8 +132,8 @@ In the tech-file from the manufacturer there are also electrical rules implied. 
 
 The first important value is the sheet resistance. This value describes the resistance of a layer and I used it to calculate the resistance of the routes. I don't need a really exact resistance, only something to measure and compare which takes into account the different layers. Therefore my personal definition for this algorithm of the sheet resistance will possibly be not the right one. In my point of view, in this case it is useful. For routes on one layer I just multiply the sheet resistance value with the length of the route, as I always use the minimum width for routes. A via doesn't really have a length, so I multiply the value with the area. Afterwards, these two results are  summed up for a whole connection and this represents then the resistance of this connection.
 
-The other two used values are the edge- and areacapacitance. The edgecapacitance describes the capacity between two neighbour routes on the same layer, the areacapacitance the capacity between two routes on the same position but on different layers. The total capacities ($C_e$ and $C_a$) are calculated from the length where two routes are neighbours ($l$), the distance between them ($d$) in case of an edge capacitor and the values from the technology file ($C'_e$ and $C'_a$).
-\[C_a = C'_a \cdot l\]
+The other two used values are the edge- and areacapacitance. The edgecapacitance describes the capacity between two neighbour routes on the same layer, the areacapacitance the capacity between two routes on the same position but on different layers. The total capacities ($C_e$ and $C_a$) are calculated from the length where two routes are neighbours ($l$), the distance between them ($d$) in case of an edge capacitor, the width they overlap ($w$) in case of an area capacity and the values from the technology file ($C'_e$ and $C'_a$).
+\[C_a = C'_a \cdot l \cdot w\]
 \[C_e = C'_e \cdot \frac{l}{d}\]
 
 All in all, the here used definitions are for sure not the right ones, but the results are multiplied with adjustable weights afterwards anyway. Therefore, the exact values are not a matter of interest, the results are only used as rough estimations and measurement.
