--- a/routing.tex
+++ b/routing.tex
@@ -193,21 +193,8 @@ In this special case I had to implement the routing into the hierarchical placin
 This is the point where the line expansion feasibility router comes into play. This algorithm is a modified version of the basic line expansion algorithm. The only difference  is the amount of possible routes which are created for every necessary connection. The basic version creates as much as possible and the modified version only one route. This will result in usually quite bad layouts, and because of this the router shouldn't be used for the final step. But as pre router the algorithm is quite useful, as it is very fast and can select very efficient if a placement is at least feasible to route for a line expansion router.
 
 \subsection{Extended Line Expansion Router}
-This extended version of the line expansion router is based on the simple version. So it is again a sequential approach with the same drawbacks and advantages as the previous versions. The main difference to it is how the different routes are combined to a complete net and how the possibilities are selected afterwards. But before I discuss the selection I want to describe how the possibilities are generated.
-
-\subsubsection{Create Routes}
-The whole task is seperated into the routing of the nets. For every possibility of the first net I create the same amount of possible connections for every other net, and vice versa. One single net is created in the same manner, but in this case it is made out of several routes. The first route connects the first two modules, the second route connects the third module to the already existing net, the third route connects the fourth module to the already existing net, and so on. As the line expansion algorithm creates a bunch of possible connections for every route I receive a whole set of possibilities for every net. The maximum number for these is limited by an algorithm parameter, which creates an implicit limitation of the maximum possibilities of every route of a net.
-
-This additional parameter is a quite important one for this version of the router. The computation time increases exponential with this number, therefore it is a good starting point if the users wants to reduce the time spent on routing. As one net can connect more than two modules this count must be distributed to the routes, which constitute the net. In the case of only two modules to connect it is quite easy. The router then selects the as much possibilities for this route as he can spent on the whole net. If there are more modules it becomes a bit more complicated, as for every selection of the first route there are again as much possibilities for the second one, and so on, if I distribute the amount equally to all parts of the net. If I continue this thought I get a maximum count of possibilities for each route ($x_{route}$) of a net with a total maximum count of possibilities ($x_{net}$) and $n$ modules:
-\[x_{route} = \sqrt[n - 1]{x_{net}}\]
-
-This formula can also be used for the case of only one module. As I want to exploit the total maximum count of possibilities, the last route of a net can just create as much variants till the total maximum is reached.
-
-\subsubsection{Select Routes}
-The selection of the routes after the creations makes use of the parasitics. They should be minimized in all cases, the resistance and the capacities. For a minimum resistance only the length and the selection of layers is a matter of interest but for the capacities the whole geometry must be taken into account. Also, as there are two different values to minimize, the user has to define how important which type of parasitic is to him. There can't be a general definition like \emph{resistance is twice imporant than capacity}. This depends on the whole circuit and the constraints which the designer wants to meet.
-
-The actual selection of the route is quite easy: After the creation step I have a whole bunch of possible routings, where I calculate the parasitic sum
-\[p = w_R \cdot R + w_C \cdot C\]
-(where $w_R$ is the weight for the resistance, $w_C$ the weight for the capacity, $R$ the total resistance and $C$ the total capacity) for every routing. The best one in this term is then the one with the smallest parasitic sum.
+This extended version of the line expansion router is based on the simple version. So it is again a sequential approach with the same drawbacks and advantages as the previous versions. The main difference to it is how I select the routes. I create the routes actually in the same way like for the previous version. To improve the performance I make a pre-selection based on the resistance, which can be done easily, as the routes are already sorted by there resistance. For all the routes, which are then left, I calculate the total edge and area capacity that would turn out, if this route is added to the connections of the previously routed nets. I then combine these values together to the parasitic sum
+\[p = w_R \cdot R + w_{C_a} \cdot C_a + w_{C_e} \cdot C_e\]
+(where $w_i$ are the weights and $R$, $C_a$ and $C_e$ are the parasitics as defined in \ref{sec:electrical_rules}) on which the actual selection is based.
 
 PICTURE MISSING OF ROUTED MILLER AMPLIFIER (LAYOUT)
